# dinov3

./: README.md  pyproject.toml
dinov3/checkpointer/: checkpointer.py
dinov3/data/: augmentations.py
dinov3/hub/: backbones.py
dinov3/train/: ssl_meta_arch.py  train.py
tools/: create_dinov3_checkpoint_from_backbone_weights.py
