[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dinov3"
description = ""
authors = [{name = "Meta AI"}]
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version", "dependencies", "optional-dependencies" ]

[project.urls]
Homepage = "https://github.com/facebookresearch/dinov3"
Repository = "https://github.com/facebookresearch/dinov3"

[tool.setuptools]
packages = ["dinov3"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools.dynamic]
version = {attr = "dinov3.__version__"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
files = "dinov3"
exclude = '''(?x)(
  ^dinov3/tests/([^/]+/)*test_.*\.py$  # Unit tests
)'''

[tool.pylint.master]
persistent = false
score = false

[tool.pylint.messages_control]
disable = "all"
enable = [
  "miscellaneous",
  "similarities",
]

[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
min-similarity-lines = 8

[tool.pylint.reports]
reports = false

[tool.pylint.miscellaneous]
notes = [
  "FIXME",
  "XXX",
  "TODO",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"hubconf.py" = ["F401"]
